<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_to"
            android:layout_width="157dp"
            android:layout_height="68dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="65dp"
            android:text="@string/register_to"
            android:textAppearance="@style/register_to"
            android:gravity="top"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "16sp"
                android:text="@string/baru"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:gravity="top"/>

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize= "16sp"
                android:text="@string/signup"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:clickable="true"
                android:textColor="@color/biru"/>

        </LinearLayout>

        <EditText
            android:id="@+id/regis_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="287dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/nama"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/regis_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="287dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/email"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/regis_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="380dp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/pass"
            android:paddingLeft="20dp"/>


        <TextView
            android:id="@+id/use_at_leas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="3dp"
            android:text="@string/passwarn"
            android:textAppearance="@style/use_at_leas"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/tanggal_lah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/tanggal"
            android:textAppearance="@style/tanggal"
            android:gravity="top"
            />

        <EditText
            android:id="@+id/tgl_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="380dp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/tanggal"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/jenis_kelam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/jenis_kelam"
            android:textAppearance="@style/jenis_kelam"
            android:gravity="top"
            />

        <RadioGroup
            android:id="@+id/rg_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki"
                android:textAppearance="@style/jk"/>

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan"
                android:textAppearance="@style/jk"/>


        </RadioGroup>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:id="@+id/termsandcond"
            />

        <Button
            android:id="@+id/btn_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="342dp"
            android:height="64dp"
            android:backgroundTint="@color/biru"
            android:text="@string/regis"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="483dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="24dp"/>



    </LinearLayout>

</ScrollView>

